--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,11 +38,11 @@
   <body>
 
    
-    <div class="col-10  justify-content-center">
-      <h1 class="text-center">Fil d'actualité</h1>
-      <div class="col-11 col-lg-9 shadow-lg " id="app" class="app">
-
-      </div>
+    <div id="app" class="app col-10  justify-content-center mx-auto">
+        <h1 class="text-center">Fil d'actualité</h1>
+        <div class="col-11 col-lg-9 shadow-lg mx-auto"  >
+            <p>I said :   {{ message }}</p>
+        </div>
   </div>
   
     <!-- built files will be auto injected -->
@@ -51,17 +51,16 @@
   <footer>
 
   </footer>
-  <script src="<https://cdn.jsdelivr.net/npm/vue>"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="../jquery-3.5.1.min.js"></script>
   <script src="./bootstrap/js/bootstrap.js"></script>
+
   <script>
-    import HomeLink from './components/HomeLink.vue'
-    
-    export default {
-        name: 'nav',
-        components: {
-            HomeLink
+      const app = new Vue({
+        el: "#app",
+        data: {
+            message: 'try something'
         }
-    }
+      })
     </script>
 </html>
